--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,4 @@
-
-/*# sourceMappingURL=main.css.map *//*# sourceMappingURL=main.css.map */
+.logo {
+  fill: chartreuse;
+  background-color: black;
+}/*# sourceMappingURL=main.css.map */
