разметка без стилей

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -6,8 +6,8 @@
 @import './components/info';
 @import './components/price';
 @import './components/statistic';
-// @import './components/about';
-// @import './components/about'; 
+@import './components/online-form';
+@import './components/foter'; 
 // @import './components/about';
 // @import './components/about';
 // @import './components/about';
