--- a/Sass/components/_online-form.scss
+++ b/Sass/components/_online-form.scss
@@ -1,4 +1,5 @@
 .online-form {
-    background-color: $foter-bg;
+    background-color: $footer-bg;
     color: $text-white;
+    outline: 3px solid red;
 }
