--- a/Sass/utils/_var.scss
+++ b/Sass/utils/_var.scss
@@ -1,4 +1,4 @@
 $second-color: #FF6C00;
-$foter-bg: #191C26;
+$footer-bg: #191C26;
 $text-white: #ffffff;
-$foter-text: #9DA4BD;
+$fo0ter-text: #9DA4BD;
