--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -6,9 +6,10 @@
 @import './components/info';
 @import './components/price';
 @import './components/statistic';
+@import './components/master';
 @import './components/online-form';
 @import './components/foter'; 
-// @import './components/about';
+
 // @import './components/about';
 // @import './components/about';
 // @import './components/about';
