--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/reset';
 @import './utils/var';
+@import './components/mainbtn';
 @import './components/header';
 @import './components/main';
 @import './components/about';
@@ -7,6 +8,7 @@
 @import './components/price';
 @import './components/statistic';
 @import './components/master';
+@import './components/example';
 @import './components/online-form';
 @import './components/foter'; 
 
