--- a/Sass/components/_master.scss
+++ b/Sass/components/_master.scss
@@ -1,3 +1,37 @@
 .master {
+    background-color: $statistic-bg;
     outline: 3px solid green;
+    text-align: center;
+
+     
+    &__section {}
+
+    &__list {}
+
+    &__item {
+        // text-align: center;
+    }
+
+    &__name {
+        // text-align: center;
+    }
+
+    &__spec {
+        // text-align: center;
+    }
+}
+.title {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 49px;
+    letter-spacing: 0.05em;
+
+}
+.soc {
+
+    &__list {}
+
+    &__item {}
 }
