--- a/css/main.css
+++ b/css/main.css
@@ -15,19 +15,20 @@ a, li {
   text-decoration: none;
 }
 
+.primary-btn {
+  display: inline-block;
+  padding: 12px 20px;
+  border-radius: 25px;
+  border: 1px solid #FF6C00;
+  color: #191C26;
+}
+
+.primary-btn .light {
+  color: #191C26;
+}
+
 .header .logo {
   margin-left: 30px;
-}
-.header .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 .header .menu__btn {
   width: 40px;
@@ -45,15 +46,74 @@ a, li {
   color: #ffffff;
 }
 .about {
+  padding: 84px 31px;
   outline: 3px solid red;
 }
 
 .price {
-  outline: 3px solid red;
+  outline: 3px solid brown;
+  padding: 84px 0;
+  background-image: url(/img/img.jpg);
+  color: #ffffff;
+}
+.statistic {
+  padding: 84px 31px;
+}
+
+.number-box {
+  background-color: #F7F7F7;
+  width: 193px;
+  text-align: center;
+}
+
+.number-box p {
+  padding-top: 20px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 57px;
+  letter-spacing: 0.05em;
+}
+
+.number-box span {
+  display: block;
+  padding-bottom: 20px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 15px;
 }
 
 .master {
+  background-color: #F7F7F7;
   outline: 3px solid green;
+  text-align: center;
+}
+.title {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 49px;
+  letter-spacing: 0.05em;
+}
+
+.container-example {
+  padding: 84px 0;
+}
+
+.pre-title {
+  padding-bottom: 44px;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 15px;
+  /* identical to box height */
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
 
 .online-form {
