создание мобильного меню

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -3,6 +3,7 @@
 @import './components/mainbtn';
 @import './components/header';
 @import './components/main';
+@import './components/mobile-menu';
 @import './components/about';
 @import './components/info';
 @import './components/price';
