--- a/Sass/components/_header.scss
+++ b/Sass/components/_header.scss
@@ -2,7 +2,8 @@
     // background-image: url(/img/Slider.jpg);
     
     &__wrapper {
-        // display: flex;
+        display: flex;
+        align-items: center;
         // flex-wrap: wrap;     
   }
 
@@ -17,20 +18,19 @@
 
 
 .menu {
-    // display: flex;
-    // justify-content:space-between;
-    // align-items: center;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
 
-    // @media screen and (min-width:768px) {
-    //     justify-content: space-between;
-    // }
+    @media screen and (min-width:768px) {
+        justify-content: space-between;
+    }
 
 
 &__list {
-    // @media screen and (min-width:768px) {
-    //     display: flex;
-          
-    // }
+    @media screen and (min-width:768px) {
+        display: flex;
+    }
 }
 
 &__btn {
@@ -47,7 +47,15 @@
 &__item {}
 }
 
-.contacts {}
+@media (max-width: 767px) {
+    .menu__list {
+        display: none;
+    }
+}
+
+.contacts {
+    
+}
 
 .contact {
     color: $footer-text;
