--- a/Sass/components/_main.scss
+++ b/Sass/components/_main.scss
@@ -1,5 +1,5 @@
 .hero {
-    background-image: url(/img/Slider.jpg);
+    padding: 208px 143px 183px 31px;
     color: $text-white;
     &__foto {}
 
