--- a/Sass/utils/_reset.scss
+++ b/Sass/utils/_reset.scss
@@ -1,8 +1,8 @@
 *::before,
 *::after {
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 body {
