--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 *::before,
 *::after {
+  margin: 0px;
+  padding: 0px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -27,6 +27,10 @@ a, li {
   color: #191C26;
 }
 
+.header {
+  background-image: url(/img/Slider.jpg);
+  outline: 3px solid #ee0e77;
+}
 .header__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -34,45 +38,80 @@ a, li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.header .container {
+  outline: 3px solid #0ddd41;
 }
 .header .logo {
   margin-left: 30px;
 }
-.header .menu {
+.header .menun {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  outline: 3px solid red;
 }
-@media screen and (min-width: 768px) {
-  .header .menu {
+@media screen and (max-width: 768px) {
+  .header .menun {
+    width: 100%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
 }
+.header .menun__list {
+  display: none;
+}
 @media screen and (min-width: 768px) {
-  .header .menu__list {
+  .header .menun__list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 }
-.header .menu__btn {
+.header .menun__btn {
   width: 40px;
   height: 40px;
 }
-.header .menu__svg {
+.header .menun__svg {
   background-color: black;
+}
+.header .menun__link {
+  color: #ffffff;
+}
+@media (min-width: 767px) {
+  .header .menun__link {
+    margin-right: 25px;
+  }
 }
 @media (max-width: 767px) {
   .header .menu__list {
     display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header .contacts {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .header .contact {
@@ -80,28 +119,20 @@ a, li {
 }
 
 .hero {
-  background-image: url(/img/Slider.jpg);
+  padding: 208px 143px 183px 31px;
   color: #ffffff;
 }
 .menu-toggle {
   min-height: 40px;
   min-width: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   margin: 0;
-  padding: 0;
+  padding-right: 31px;
   background-color: transparent;
   cursor: pointer;
   border: none;
   border-radius: 50%;
   outline: none;
+  color: #ffffff;
 }
 
 @media (min-width: 768px) {
@@ -117,12 +148,10 @@ a, li {
 .menu-container {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100vw;
+  right: 0;
+  width: 70%;
   height: 100vh;
-  padding: 32px;
   background-color: #F7F7F7;
-  z-index: 999;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms ease-in-out;
@@ -134,17 +163,18 @@ a, li {
 .menu-container.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  z-index: 5;
 }
 
 .menu-container .menu-toggle {
   position: absolute;
   top: 16px;
-  right: 16px;
+  right: 0px;
   color: #191C26;
 }
 
 .mobile-menu {
-  padding: 0;
+  padding: 118px 144px 508px 40px;
   margin: 0;
   list-style: none;
 }
@@ -171,9 +201,22 @@ a, li {
   padding: 84px 31px;
 }
 
+.container-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 48%;
+}
+
 .number-box {
   background-color: #F7F7F7;
-  width: 193px;
+  min-width: 193px;
+  width: 48%;
   text-align: center;
 }
 
