rename parsal footer

--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -11,7 +11,7 @@
 @import './components/master';
 @import './components/example';
 @import './components/online-form';
-@import './components/foter'; 
+@import './components/footer'; 
 
 // @import './components/about';
 // @import './components/about';
